# app-functions-sdk-python

./: .gitignore  pyproject.toml  requirements.txt
app-service-template/: main.py
examples/custom-trigger/: main.py
src/app_functions_sdk_py/: factory.py
src/app_functions_sdk_py/bootstrap/metrics/: deletable_metrics_registry.py
src/app_functions_sdk_py/functions/: http.py  mqtt.py
src/app_functions_sdk_py/interfaces/: __init__.py
src/app_functions_sdk_py/internal/app/: service.py
src/app_functions_sdk_py/internal/runtime/: __init__.py
src/app_functions_sdk_py/internal/trigger/: defaultservicebinding.py
src/app_functions_sdk_py/internal/web_server/: server.py
tests/app_functions_sdk_py/bootstrap/metrics/: test_manager.py  test_reporter.py
tests/app_functions_sdk_py/contracts/dtos/: test_event.py
