[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_functions_sdk_py"
version = "0.1.0"
authors = [
  { name="judehung", email="judehung@iotechsys.com" },
]
description = "The python-based SDK to support edgexfoundry application service"
readme = "README.md"
license = { text = "Apache 2 License" }
requires-python = ">=3.10,<3.11"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10'
]

[project.urls]
Homepage = "https://github.com/edgexfoundry-holding/app-functions-sdk-python"
Issues = "https://github.com/edgexfoundry-holding/app-functions-sdk-python/issues"

[tool.poetry.dependencies]
numpy = "1.26.4"
typing-extensions = "4.12.0"
pyyaml = "6.0.1"
dacite = "1.8.1"
requests = "2.32.3"
fastapi = "0.111.1"
isodate = "0.6.1"
uvicorn = "0.30.3"
paho-mqtt = "2.1.0"
nats-py = "2.8.0"
deepdiff = "7.0.1"
xmltodict = "0.13.0"
panzi-json-logic = "1.0.1"
dataclasses-json = "0.6.7"
pycryptodomex = "3.20.0"
cbor2 = ">=5.6.5,<5.7.0"
pyformance = {git = "ssh://git@github.com/A1daAlvar3zD13z/pyformance.git"}
